Play again alignment issue fix

--- a/src/screens/play-game/play-game.scss
+++ b/src/screens/play-game/play-game.scss
@@ -84,7 +84,7 @@
             cursor: pointer;
             text-shadow: 0 0 16px rgba(0, 0, 0, 0.16);
             font-family: Gotham;
-            font-size: 3.5rem;
+            font-size: 3.3rem;
             font-weight: 500;
             font-stretch: normal;
             font-style: normal;
